# hack-env

./: .gitignore  Patronus - READ THIS.md  README.md  Snorkel Vincent - READ THIS.md  hackathon.md  idea.md  northflank.md  plan.md  sponsors.md  train_remote.sh
red_team_arena/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
red_team_arena/server/: Dockerfile  __init__.py  app.py  content.py  curriculum.py  environment.py  expert.py  gradio_ui.py  policies.py  rewards.py
tests/: test_environment.py
training/: angry_claw_colab.ipynb  demo_eval.py  eval_model.py  train.py  train_colab.py
